Agregado proyecto de criptomonedas con archivos CSS y JS

--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="JS/preeentrega.js"></script>
-    <title>Document</title>
+    <title>Crypto Market</title>
+    <script defer src="JS/main.js"></script>
+    <link rel="stylesheet" href="CSS/main_style.css">
 </head>
 <body>
-    <h1>Lucia Paz</h1>
+     <header>    
+        <h1>Bienvenido al Crypto Market</h1>
+        <h3 id="h3_header">Tu lugar para invertir en criptomonedas</h3>
+    </header>
+    <br>
+    <h3 id="intro">Estas son las criptomonedas disponibles en este momento:</h3>
+    <br>
+    <div id="cryptos"></div>      
 </body>
 </html>
